# AetheriaDiscordBot

./: README.md  aetheriabot.py  botCode.py  database.py  keep_alive.py  main.py  pyproject.toml  templatecog.py  test.py  webdashboard.py
cogs/: checklistscog.py  event_cog.py  eventcog.py  events.json  github_cog.py  miscelaneouscog.py  miscellaneouscog.py  templatecog.py
routes/: utils.py
static/js/: script.js
templates/: index.html
