[tool.poetry]
name = "aetheriadiscordbot"
version = "0.1"
description = "Project manager for Aetheria Unreal project."
authors = ["AgentLoneStar007"]

[tool.poetry.dependencies]
python = "^3.8"
discord-pretty-help = "^1.3.2"
discord = "^1.7.3"
Quart = "^0.15.1"
replit = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
